# django-honeypot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/workflows/: test.yml
honeypot/: apps.py  checks.py  decorators.py  middleware.py  models.py  tests.py  views.py
honeypot/templates/honeypot/: honeypot_error.html  honeypot_field.html
honeypot/templatetags/: honeypot.py
honeypot/tests/: __init__.py  settings.py
