[tool.poetry]
name = "django-honeypot"
packages = [{ include = "honeypot" }]
version = "1.2.1"
description = "Django honeypot field utilities"
authors = ["James Turk <dev@jamesturk.net>"]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "https://github.com/jamesturk/django-honeypot/"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Environment :: Web Environment",
]

[tool.poetry.dependencies]
Django = ">=3.2,<5.2"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
