[project]
name = "django-honeypot"
version = "1.3.0"
description = "Django honeypot field utilities"
authors = [
    { name = "jpt", email = "dev@jpt.sh" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<7",
]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "https://github.com/jamesturk/django-honeypot/"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Environment :: Web Environment",
]

[tool.hatch.build.targets.wheel]
packages = ["honeypot"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
